fix extra space top bar

--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,8 @@ body {
 .topbar {
   background-color: #242424;
   height: 60px;
+  width: 100%;
+  margin: 0;
 }
 .topbar-left {
   color: #565656;
